<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/action_save_drawing" android:title="@string/action_save_drawing"
        android:icon="@drawable/ic_action_save"
        android:orderInCategory="100" app:showAsAction="always" />

    <item android:id="@+id/action_send_drawing" android:title="@string/action_send_drawing"
        android:icon="@drawable/ic_action_send_now"
        android:orderInCategory="100" app:showAsAction="always" />

    <!--
    <item android:id="@+id/action_discard_drawing" android:title="@string/action_discard_drawing"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="100" app:showAsAction="always" />
    -->

    <item android:id="@+id/action_clear" android:title="@string/action_clear"
        android:orderInCategory="100" app:showAsAction="never" />

</menu>