<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    card_view:cardCornerRadius="4dp"
    card_view:cardBackgroundColor="@color/card_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/image_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/drawing_thumbnail"
                android:layout_width="200dip"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/drawing_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_toRightOf="@id/image_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/drawing_edit"
                android:text="@string/edit_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:textColor="@color/button_text_blue"
                />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <Button
                android:id="@+id/drawing_send"
                android:text="@string/send_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:textColor="@color/button_text_blue"
                />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <Button
                android:id="@+id/drawing_delete"
                android:text="@string/delete_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:textSize="14sp"
                android:textAllCaps="true"
                android:textColor="@color/button_text_blue"
                />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>